tools/header.h

typedef double cpFloat;
typedef struct cpVect
{
    cpFloat x, y;
} cpVect;
typedef unsigned int cpTimestamp;
typedef void *cpDataPointer;
typedef struct cpArray cpArray;
typedef uintptr_t cpHashValue;
typedef unsigned char cpBool;
typedef uintptr_t cpCollisionType;
typedef struct cpTransform
{
    cpFloat a, b, c, d, tx, ty;
} cpTransform;
typedef struct cpBB
{
    cpFloat l, b, r, t;
} cpBB;
struct cpArray
{
    int num, max;
    void **arr;
};
// typedef struct cpSpatialIndexClass cpSpatialIndexClass;
// typedef struct cpSpatialIndex cpSpatialIndex;
// typedef struct cpCollisionID cpCollisionID;
// typedef struct cpSpatialIndexIteratorFunc cpSpatialIndexIteratorFunc;
// typedef struct cpSpatialIndexBBFunc cpSpatialIndexBBFunc;

// typedef struct cpBB{
// 	cpFloat l, b, r ,t;
// } cpBB;

// typedef cpBB (*cpSpatialIndexBBFunc)(void *obj);
// typedef cpCollisionID (*cpSpatialIndexQueryFunc)(void *obj1, void *obj2, cpCollisionID id, void *data);
// typedef cpFloat (*cpSpatialIndexSegmentQueryFunc)(void *obj1, void *obj2, void *data);
// typedef cpBool (*cpSpatialIndexContainsImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef struct cpContactBufferHeader cpContactBufferHeader;

// typedef void (*cpSpatialIndexDestroyImpl)(cpSpatialIndex *index);

// typedef int (*cpSpatialIndexCountImpl)(cpSpatialIndex *index);
// typedef void (*cpSpatialIndexEachImpl)(cpSpatialIndex *index, cpSpatialIndexIteratorFunc func, void *data);

// typedef cpBool (*cpSpatialIndexContainsImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef void (*cpSpatialIndexInsertImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef void (*cpSpatialIndexRemoveImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);

// typedef void (*cpSpatialIndexReindexImpl)(cpSpatialIndex *index);
// typedef void (*cpSpatialIndexReindexObjectImpl)(cpSpatialIndex *index, void *obj, cpHashValue hashid);
// typedef void (*cpSpatialIndexReindexQueryImpl)(cpSpatialIndex *index, cpSpatialIndexQueryFunc func, void *data);

// typedef void (*cpSpatialIndexQueryImpl)(cpSpatialIndex *index, void *obj, cpBB bb, cpSpatialIndexQueryFunc func, void *data);
// typedef void (*cpSpatialIndexSegmentQueryImpl)(cpSpatialIndex *index, void *obj, cpVect a, cpVect b, cpFloat t_exit, cpSpatialIndexSegmentQueryFunc func, void *data);
typedef struct cpSpatialIndex cpSpatialIndex;
struct cpSpatialIndex
{
    cpSpatialIndexClass *klass;

    cpSpatialIndexBBFunc bbfunc;

    cpSpatialIndex *staticIndex, *dynamicIndex;
};
typedef struct cpContactBufferHeader cpContactBufferHeader;
typedef struct cpHashSet cpHashSet;
typedef struct cpCollisionHandler cpCollisionHandler;
typedef struct cpSpace cpSpace;
typedef struct cpArbiter cpArbiter;
struct cpArbiterThread
{
    struct cpArbiter *next, *prev;
};
enum cpArbiterState
{
    // Arbiter is active and its the first collision.
    CP_ARBITER_STATE_FIRST_COLLISION,
    // Arbiter is active and its not the first collision.
    CP_ARBITER_STATE_NORMAL,
    // Collision has been explicitly ignored.
    // Either by returning false from a begin collision handler or calling cpArbiterIgnore().
    CP_ARBITER_STATE_IGNORE,
    // Collison is no longer active. A space will cache an arbiter for up to cpSpace.collisionPersistence more steps.
    CP_ARBITER_STATE_CACHED,
    // Collison arbiter is invalid because one of the shapes was removed.
    CP_ARBITER_STATE_INVALIDATED,
};
/// Fast collision filtering type that is used to determine if two objects collide before calling collision or query callbacks.
typedef struct cpShapeFilter
{
    /// Two objects with the same non-zero group value do not collide.
    /// This is generally used to group objects in a composite object together to disable self collisions.
    cpGroup group;
    /// A bitmask of user definable categories that this object belongs to.
    /// The category/mask combinations of both objects in a collision must agree for a collision to occur.
    cpBitmask categories;
    /// A bitmask of user definable category types that this object object collides with.
    /// The category/mask combinations of both objects in a collision must agree for a collision to occur.
    cpBitmask mask;
} cpShapeFilter;
typedef struct cpShape cpShape;
typedef struct cpShapeClass cpShapeClass;
struct cpShapeClass
{
    cpShapeType type;

    cpShapeCacheDataImpl cacheData;
    cpShapeDestroyImpl destroy;
    cpShapePointQueryImpl pointQuery;
    cpShapeSegmentQueryImpl segmentQuery;
};
struct cpShapeMassInfo {
	cpFloat m;
	cpFloat i;
	cpVect cog;
	cpFloat area;
};
typedef struct cpConstraint cpConstraint;
typedef struct cpBody cpBody;
struct cpConstraint {
	const cpConstraintClass *klass;
	
	cpSpace *space;
	
	cpBody *a, *b;
	cpConstraint *next_a, *next_b;
	
	cpFloat maxForce;
	cpFloat errorBias;
	cpFloat maxBias;
	
	cpBool collideBodies;
	
	cpConstraintPreSolveFuncD preSolve;
	cpConstraintPostSolveFuncD postSolve;
	
	cpDataPointer userData;
};
/// Rigid body velocity update function type.
//typedef void (*cpBodyVelocityFunc)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt);
typedef void (*cpBodyVelocityFuncD)(cpBody *body, cpVect gravity, cpFloat damping, cpFloat dt, uint64_t callbackId);
/// Rigid body position update function type.
// typedef void (*cpBodyPositionFunc)(cpBody *body, cpFloat dt);
typedef void (*cpBodyPositionFuncD)(cpBody *body, cpFloat dt, uint64_t callbackId);
struct cpBody {
	// Integration functions
	cpBodyVelocityFuncD velocity_func;
	cpBodyPositionFuncD position_func;
	
	// mass and it's inverse
	cpFloat m;
	cpFloat m_inv;
	
	// moment of inertia and it's inverse
	cpFloat i;
	cpFloat i_inv;
	
	// center of gravity
	cpVect cog;
	
	// position, velocity, force
	cpVect p;
	cpVect v;
	cpVect f;
	
	// Angle, angular velocity, torque (radians)
	cpFloat a;
	cpFloat w;
	cpFloat t;
	
	cpTransform transform;
	
	cpDataPointer userData;
	
	// "pseudo-velocities" used for eliminating overlap.
	// Erin Catto has some papers that talk about what these are.
	cpVect v_bias;
	cpFloat w_bias;
	
	cpSpace *space;
	
	cpShape *shapeList;
	cpArbiter *arbiterList;
	cpConstraint *constraintList;
	
	struct {
		cpBody *root;
		cpBody *next;
		cpFloat idleTime;
	} sleeping;
};
struct cpShape
{
    const cpShapeClass *klass;

    cpSpace *space;
    cpBody *body;
    struct cpShapeMassInfo massInfo;
    cpBB bb;

    cpBool sensor;

    cpFloat e;
    cpFloat u;
    cpVect surfaceV;

    cpDataPointer userData;

    cpCollisionType type;
    cpShapeFilter filter;

    cpShape *next;
    cpShape *prev;

    cpHashValue hashid;
};
struct cpArbiter
{
    cpFloat e;
    cpFloat u;
    cpVect surface_vr;

    cpDataPointer data;

    const cpShape *a, *b;
    cpBody *body_a, *body_b;
    struct cpArbiterThread thread_a, thread_b;

    int count;
    struct cpContact *contacts;
    cpVect n;

    // Regular, wildcard A and wildcard B collision handlers.
    cpCollisionHandler *handler, *handlerA, *handlerB;
    cpBool swapped;

    cpTimestamp stamp;
    enum cpArbiterState state;
};
struct cpCollisionHandler {
	const cpCollisionType typeA;
	const cpCollisionType typeB;
	cpCollisionBeginFuncD beginFunc;
	cpCollisionPreSolveFuncD preSolveFunc;
	cpCollisionPostSolveFuncD postSolveFunc;
	cpCollisionSeparateFuncD separateFunc;
	cpDataPointer userData;
	uint64_t callbackId;
};
struct cpSpace
{
    int iterations;

    cpVect gravity;
    cpFloat damping;

    cpFloat idleSpeedThreshold;
    cpFloat sleepTimeThreshold;

    cpFloat collisionSlop;
    cpFloat collisionBias;
    cpTimestamp collisionPersistence;

    cpDataPointer userData;

    cpTimestamp stamp;
    cpFloat curr_dt;

    cpArray *dynamicBodies;
    cpArray *staticBodies;
    cpArray *rousedBodies;
    cpArray *sleepingComponents;

    cpHashValue shapeIDCounter;
    cpSpatialIndex *staticShapes;
    cpSpatialIndex *dynamicShapes;

    cpArray *constraints;

    cpArray *arbiters;
    cpContactBufferHeader *contactBuffersHead;
    cpHashSet *cachedArbiters;
    cpArray *pooledArbiters;

    cpArray *allocatedBuffers;
    unsigned int locked;

    cpBool usesWildcards;
    cpHashSet *collisionHandlers;
    cpCollisionHandler defaultHandler;

    cpBool skipPostStep;
    cpArray *postStepCallbacks;

    cpBody *staticBody;
    cpBody _staticBody;
};
typedef struct cpContactPointSet cpContactPointSet;
/// A struct that wraps up the important collision data for an arbiter.
struct cpContactPointSet {
	/// The number of contact points in the set.
	int count;
	
	/// The normal of the collision.
	cpVect normal;
	
	/// The array of contact points.
	struct {
		/// The position of the contact on the surface of each shape.
		cpVect pointA, pointB;
		/// Penetration distance of the two shapes. Overlapping means it will be negative.
		/// This value is calculated as cpvdot(cpvsub(point2, point1), normal) and is ignored by cpArbiterSetContactPointSet().
		cpFloat distance;
	} points[CP_MAX_CONTACTS_PER_ARBITER];
};
 int cpConvexHull(int count, const cpVect *verts, cpVect *result, int *first, cpFloat tol);
 cpFloat cpArbiterGetRestitution(const cpArbiter *arb);
 void cpArbiterSetRestitution(cpArbiter *arb, cpFloat restitution);
 cpFloat cpArbiterGetFriction(const cpArbiter *arb);
 void cpArbiterSetFriction(cpArbiter *arb, cpFloat friction);
 cpVect cpArbiterGetSurfaceVelocity(cpArbiter *arb);
 void cpArbiterSetSurfaceVelocity(cpArbiter *arb, cpVect vr);
 cpDataPointer cpArbiterGetUserData(const cpArbiter *arb);
 void cpArbiterSetUserData(cpArbiter *arb, cpDataPointer userData);
 cpVect cpArbiterTotalImpulse(const cpArbiter *arb);
 cpFloat cpArbiterTotalKE(const cpArbiter *arb);
 cpBool cpArbiterIgnore(cpArbiter *arb);
 void cpArbiterGetShapes(const cpArbiter *arb, cpShape **a, cpShape **b);
 void cpArbiterGetBodies(const cpArbiter *arb, cpBody **a, cpBody **b);
 cpContactPointSet cpArbiterGetContactPointSet(const cpArbiter *arb);
 void cpArbiterSetContactPointSet(cpArbiter *arb, cpContactPointSet *set);
 cpBool cpArbiterIsFirstContact(const cpArbiter *arb);
 cpBool cpArbiterIsRemoval(const cpArbiter *arb);
 int cpArbiterGetCount(const cpArbiter *arb);
 cpVect cpArbiterGetNormal(const cpArbiter *arb);
 cpVect cpArbiterGetPointA(const cpArbiter *arb, int i);
 cpVect cpArbiterGetPointB(const cpArbiter *arb, int i);
 cpFloat cpArbiterGetDepth(const cpArbiter *arb, int i);
 cpBool cpArbiterCallWildcardBeginA(cpArbiter *arb, cpSpace *space);
 cpBool cpArbiterCallWildcardBeginB(cpArbiter *arb, cpSpace *space);
 cpBool cpArbiterCallWildcardPreSolveA(cpArbiter *arb, cpSpace *space);
 cpBool cpArbiterCallWildcardPreSolveB(cpArbiter *arb, cpSpace *space);