lib/src/bindings.dart


  int cpConvexHull(
    int count,
    ffi.Pointer<cpVect> verts,
    ffi.Pointer<cpVect> result,
    ffi.Pointer<ffi.Int> first,
    double tol,
  ) {
    return _cpConvexHull(
      count,
      verts,
      result,
      first,
      tol,
    );
  }

  late final _cpConvexHullPtr = _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Pointer<cpVect>, ffi.Pointer<cpVect>, ffi.Pointer<ffi.Int>, cpFloat)>>('cpConvexHull');
  late final _cpConvexHull = _cpConvexHullPtr.asFunction<int Function(int, ffi.Pointer<cpVect>, ffi.Pointer<cpVect>, ffi.Pointer<ffi.Int>, double)>();

  double cpArbiterGetRestitution(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterGetRestitution(
      arb,
    );
  }

  late final _cpArbiterGetRestitutionPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpArbiter>)>>('cpArbiterGetRestitution');
  late final _cpArbiterGetRestitution = _cpArbiterGetRestitutionPtr.asFunction<double Function(ffi.Pointer<cpArbiter>)>();

  void cpArbiterSetRestitution(
    ffi.Pointer<cpArbiter> arb,
    double restitution,
  ) {
    return _cpArbiterSetRestitution(
      arb,
      restitution,
    );
  }

  late final _cpArbiterSetRestitutionPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, cpFloat)>>('cpArbiterSetRestitution');
  late final _cpArbiterSetRestitution = _cpArbiterSetRestitutionPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, double)>();

  double cpArbiterGetFriction(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterGetFriction(
      arb,
    );
  }

  late final _cpArbiterGetFrictionPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpArbiter>)>>('cpArbiterGetFriction');
  late final _cpArbiterGetFriction = _cpArbiterGetFrictionPtr.asFunction<double Function(ffi.Pointer<cpArbiter>)>();

  void cpArbiterSetFriction(
    ffi.Pointer<cpArbiter> arb,
    double friction,
  ) {
    return _cpArbiterSetFriction(
      arb,
      friction,
    );
  }

  late final _cpArbiterSetFrictionPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, cpFloat)>>('cpArbiterSetFriction');
  late final _cpArbiterSetFriction = _cpArbiterSetFrictionPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, double)>();

  cpVect cpArbiterGetSurfaceVelocity(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterGetSurfaceVelocity(
      arb,
    );
  }

  late final _cpArbiterGetSurfaceVelocityPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpArbiter>)>>('cpArbiterGetSurfaceVelocity');
  late final _cpArbiterGetSurfaceVelocity = _cpArbiterGetSurfaceVelocityPtr.asFunction<cpVect Function(ffi.Pointer<cpArbiter>)>();

  void cpArbiterSetSurfaceVelocity(
    ffi.Pointer<cpArbiter> arb,
    cpVect vr,
  ) {
    return _cpArbiterSetSurfaceVelocity(
      arb,
      vr,
    );
  }

  late final _cpArbiterSetSurfaceVelocityPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, cpVect)>>('cpArbiterSetSurfaceVelocity');
  late final _cpArbiterSetSurfaceVelocity = _cpArbiterSetSurfaceVelocityPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, cpVect)>();

  cpDataPointer cpArbiterGetUserData(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterGetUserData(
      arb,
    );
  }

  late final _cpArbiterGetUserDataPtr = _lookup<ffi.NativeFunction<cpDataPointer Function(ffi.Pointer<cpArbiter>)>>('cpArbiterGetUserData');
  late final _cpArbiterGetUserData = _cpArbiterGetUserDataPtr.asFunction<cpDataPointer Function(ffi.Pointer<cpArbiter>)>();

  void cpArbiterSetUserData(
    ffi.Pointer<cpArbiter> arb,
    cpDataPointer userData,
  ) {
    return _cpArbiterSetUserData(
      arb,
      userData,
    );
  }

  late final _cpArbiterSetUserDataPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, cpDataPointer)>>('cpArbiterSetUserData');
  late final _cpArbiterSetUserData = _cpArbiterSetUserDataPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, cpDataPointer)>();

  cpVect cpArbiterTotalImpulse(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterTotalImpulse(
      arb,
    );
  }

  late final _cpArbiterTotalImpulsePtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpArbiter>)>>('cpArbiterTotalImpulse');
  late final _cpArbiterTotalImpulse = _cpArbiterTotalImpulsePtr.asFunction<cpVect Function(ffi.Pointer<cpArbiter>)>();

  double cpArbiterTotalKE(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterTotalKE(
      arb,
    );
  }

  late final _cpArbiterTotalKEPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpArbiter>)>>('cpArbiterTotalKE');
  late final _cpArbiterTotalKE = _cpArbiterTotalKEPtr.asFunction<double Function(ffi.Pointer<cpArbiter>)>();

  int cpArbiterIgnore(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterIgnore(
      arb,
    );
  }

  late final _cpArbiterIgnorePtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpArbiter>)>>('cpArbiterIgnore');
  late final _cpArbiterIgnore = _cpArbiterIgnorePtr.asFunction<int Function(ffi.Pointer<cpArbiter>)>();

  void cpArbiterGetShapes(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<ffi.Pointer<cpShape>> a,
    ffi.Pointer<ffi.Pointer<cpShape>> b,
  ) {
    return _cpArbiterGetShapes(
      arb,
      a,
      b,
    );
  }

  late final _cpArbiterGetShapesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<ffi.Pointer<cpShape>>, ffi.Pointer<ffi.Pointer<cpShape>>)>>('cpArbiterGetShapes');
  late final _cpArbiterGetShapes = _cpArbiterGetShapesPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<ffi.Pointer<cpShape>>, ffi.Pointer<ffi.Pointer<cpShape>>)>();

  void cpArbiterGetBodies(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<ffi.Pointer<cpBody>> a,
    ffi.Pointer<ffi.Pointer<cpBody>> b,
  ) {
    return _cpArbiterGetBodies(
      arb,
      a,
      b,
    );
  }

  late final _cpArbiterGetBodiesPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<ffi.Pointer<cpBody>>, ffi.Pointer<ffi.Pointer<cpBody>>)>>('cpArbiterGetBodies');
  late final _cpArbiterGetBodies = _cpArbiterGetBodiesPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<ffi.Pointer<cpBody>>, ffi.Pointer<ffi.Pointer<cpBody>>)>();

  cpContactPointSet cpArbiterGetContactPointSet(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterGetContactPointSet(
      arb,
    );
  }

  late final _cpArbiterGetContactPointSetPtr = _lookup<ffi.NativeFunction<cpContactPointSet Function(ffi.Pointer<cpArbiter>)>>('cpArbiterGetContactPointSet');
  late final _cpArbiterGetContactPointSet = _cpArbiterGetContactPointSetPtr.asFunction<cpContactPointSet Function(ffi.Pointer<cpArbiter>)>();

  void cpArbiterSetContactPointSet(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpContactPointSet> set1,
  ) {
    return _cpArbiterSetContactPointSet(
      arb,
      set1,
    );
  }

  late final _cpArbiterSetContactPointSetPtr = _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpContactPointSet>)>>('cpArbiterSetContactPointSet');
  late final _cpArbiterSetContactPointSet = _cpArbiterSetContactPointSetPtr.asFunction<void Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpContactPointSet>)>();

  int cpArbiterIsFirstContact(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterIsFirstContact(
      arb,
    );
  }

  late final _cpArbiterIsFirstContactPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpArbiter>)>>('cpArbiterIsFirstContact');
  late final _cpArbiterIsFirstContact = _cpArbiterIsFirstContactPtr.asFunction<int Function(ffi.Pointer<cpArbiter>)>();

  int cpArbiterIsRemoval(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterIsRemoval(
      arb,
    );
  }

  late final _cpArbiterIsRemovalPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpArbiter>)>>('cpArbiterIsRemoval');
  late final _cpArbiterIsRemoval = _cpArbiterIsRemovalPtr.asFunction<int Function(ffi.Pointer<cpArbiter>)>();

  int cpArbiterGetCount(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterGetCount(
      arb,
    );
  }

  late final _cpArbiterGetCountPtr = _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<cpArbiter>)>>('cpArbiterGetCount');
  late final _cpArbiterGetCount = _cpArbiterGetCountPtr.asFunction<int Function(ffi.Pointer<cpArbiter>)>();

  cpVect cpArbiterGetNormal(
    ffi.Pointer<cpArbiter> arb,
  ) {
    return _cpArbiterGetNormal(
      arb,
    );
  }

  late final _cpArbiterGetNormalPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpArbiter>)>>('cpArbiterGetNormal');
  late final _cpArbiterGetNormal = _cpArbiterGetNormalPtr.asFunction<cpVect Function(ffi.Pointer<cpArbiter>)>();

  cpVect cpArbiterGetPointA(
    ffi.Pointer<cpArbiter> arb,
    int i,
  ) {
    return _cpArbiterGetPointA(
      arb,
      i,
    );
  }

  late final _cpArbiterGetPointAPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpArbiter>, ffi.Int)>>('cpArbiterGetPointA');
  late final _cpArbiterGetPointA = _cpArbiterGetPointAPtr.asFunction<cpVect Function(ffi.Pointer<cpArbiter>, int)>();

  cpVect cpArbiterGetPointB(
    ffi.Pointer<cpArbiter> arb,
    int i,
  ) {
    return _cpArbiterGetPointB(
      arb,
      i,
    );
  }

  late final _cpArbiterGetPointBPtr = _lookup<ffi.NativeFunction<cpVect Function(ffi.Pointer<cpArbiter>, ffi.Int)>>('cpArbiterGetPointB');
  late final _cpArbiterGetPointB = _cpArbiterGetPointBPtr.asFunction<cpVect Function(ffi.Pointer<cpArbiter>, int)>();

  double cpArbiterGetDepth(
    ffi.Pointer<cpArbiter> arb,
    int i,
  ) {
    return _cpArbiterGetDepth(
      arb,
      i,
    );
  }

  late final _cpArbiterGetDepthPtr = _lookup<ffi.NativeFunction<cpFloat Function(ffi.Pointer<cpArbiter>, ffi.Int)>>('cpArbiterGetDepth');
  late final _cpArbiterGetDepth = _cpArbiterGetDepthPtr.asFunction<double Function(ffi.Pointer<cpArbiter>, int)>();

  int cpArbiterCallWildcardBeginA(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardBeginA(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardBeginAPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardBeginA');
  late final _cpArbiterCallWildcardBeginA = _cpArbiterCallWildcardBeginAPtr.asFunction<int Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();

  int cpArbiterCallWildcardBeginB(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardBeginB(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardBeginBPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardBeginB');
  late final _cpArbiterCallWildcardBeginB = _cpArbiterCallWildcardBeginBPtr.asFunction<int Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();

  int cpArbiterCallWildcardPreSolveA(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardPreSolveA(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardPreSolveAPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardPreSolveA');
  late final _cpArbiterCallWildcardPreSolveA = _cpArbiterCallWildcardPreSolveAPtr.asFunction<int Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();

  int cpArbiterCallWildcardPreSolveB(
    ffi.Pointer<cpArbiter> arb,
    ffi.Pointer<cpSpace> space,
  ) {
    return _cpArbiterCallWildcardPreSolveB(
      arb,
      space,
    );
  }

  late final _cpArbiterCallWildcardPreSolveBPtr = _lookup<ffi.NativeFunction<cpBool Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>>('cpArbiterCallWildcardPreSolveB');
  late final _cpArbiterCallWildcardPreSolveB = _cpArbiterCallWildcardPreSolveBPtr.asFunction<int Function(ffi.Pointer<cpArbiter>, ffi.Pointer<cpSpace>)>();
